02_Fase2_Semantico_Interprete/GramaticaParser.py
# Generated from Gramatica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


# Módulo de Árbol Sintáctico - Lógica de Estructura G4


class GramaticaParser ( Parser ):

    grammarFileName = "Gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'^'", "'=='", 
                     "<INVALID>", "'>'", "'<'", "'>='", "'<='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "';'", "','", "'('", 
                     "')'", "'{'", "'}'", "'PROGRAMA'", "'INICIO'", "'FIN'", 
                     "'SI'", "'ENTONCES'", "'SINO'", "'MIENTRAS'", "'FOR'", 
                     "'IMPRIMIR'", "'RETORNAR'", "'INT'", "'FLOAT'", "'STRING'", 
                     "'BOOL'", "'VOID'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "TK_SUMA", "TK_RESTA", "TK_MULT", "TK_DIV", 
                      "TK_POTENCIA", "TK_IGUAL", "TK_DIFERENTE", "TK_MAYOR", 
                      "TK_MENOR", "TK_MAYOREQ", "TK_MENOREQ", "TK_Y", "TK_O", 
                      "TK_NOT", "ASSIGN", "SEMICOLON", "TK_COMA", "TK_PAR_IZQ", 
                      "TK_PAR_DER", "TK_LLA_IZQ", "TK_LLA_DER", "TK_PROGRAMA", 
                      "TK_INICIO", "TK_FIN", "TK_SI", "TK_ENTONCES", "TK_SINO", 
                      "TK_MIENTRAS", "TK_FOR", "TK_IMPRIMIR", "TK_RETURN", 
                      "TK_INT", "TK_FLOAT", "TK_STRING", "TK_BOOL", "TK_VOID", 
                      "TK_TRUE", "TK_FALSE", "TK_NUMERO", "TK_CADENA", "TK_ID", 
                      "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_funcDeclaration = 3
    RULE_params = 4
    RULE_param = 5
    RULE_type_ = 6
    RULE_instruccion = 7
    RULE_bloque = 8
    RULE_asignacion_core = 9
    RULE_condicional = 10
    RULE_bucle_mientras = 11
    RULE_bucle_for = 12
    RULE_impresion = 13
    RULE_sentencia_return = 14
    RULE_expr = 15
    RULE_args = 16

    ruleNames =  [ "program", "declaration", "varDeclaration", "funcDeclaration", 
                   "params", "param", "type_", "instruccion", "bloque", 
                   "asignacion_core", "condicional", "bucle_mientras", "bucle_for", 
                   "impresion", "sentencia_return", "expr", "args" ]

    EOF = Token.EOF
    TK_SUMA=1
    TK_RESTA=2
    TK_MULT=3
    TK_DIV=4
    TK_POTENCIA=5
    TK_IGUAL=6
    TK_DIFERENTE=7
    TK_MAYOR=8
    TK_MENOR=9
    TK_MAYOREQ=10
    TK_MENOREQ=11
    TK_Y=12
    TK_O=13
    TK_NOT=14
    ASSIGN=15
    SEMICOLON=16
    TK_COMA=17
    TK_PAR_IZQ=18
    TK_PAR_DER=19
    TK_LLA_IZQ=20
    TK_LLA_DER=21
    TK_PROGRAMA=22
    TK_INICIO=23
    TK_FIN=24
    TK_SI=25
    TK_ENTONCES=26
    TK_SINO=27
    TK_MIENTRAS=28
    TK_FOR=29
    TK_IMPRIMIR=30
    TK_RETURN=31
    TK_INT=32
    TK_FLOAT=33
    TK_STRING=34
    TK_BOOL=35
    TK_VOID=36
    TK_TRUE=37
    TK_FALSE=38
    TK_NUMERO=39
    TK_CADENA=40
    TK_ID=41
    WS=42
    COMMENT=43
    BLOCK_COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramG4Context(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_PROGRAMA(self):
            return self.getToken(GramaticaParser.TK_PROGRAMA, 0)
        def TK_ID(self):
            return self.getToken(GramaticaParser.TK_ID, 0)
        def TK_INICIO(self):
            return self.getToken(GramaticaParser.TK_INICIO, 0)
        def TK_FIN(self):
            return self.getToken(GramaticaParser.TK_FIN, 0)
        def EOF(self):
            return self.getToken(GramaticaParser.EOF, 0)
        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.DeclarationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramG4" ):
                listener.enterProgramG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramG4" ):
                listener.exitProgramG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramG4" ):
                return visitor.visitProgramG4(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = GramaticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = GramaticaParser.ProgramG4Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(GramaticaParser.TK_PROGRAMA)
            self.state = 35
            self.match(GramaticaParser.TK_ID)
            self.state = 36
            self.match(GramaticaParser.TK_INICIO)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4397812957184) != 0):
                self.state = 37
                self.declaration()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(GramaticaParser.TK_FIN)
            self.state = 44
            self.match(GramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclInstruccionG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def instruccion(self):
            return self.getTypedRuleContext(GramaticaParser.InstruccionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclInstruccionG4" ):
                listener.enterDeclInstruccionG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclInstruccionG4" ):
                listener.exitDeclInstruccionG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclInstruccionG4" ):
                return visitor.visitDeclInstruccionG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclVariableG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(GramaticaParser.VarDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclVariableG4" ):
                listener.enterDeclVariableG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclVariableG4" ):
                listener.exitDeclVariableG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclVariableG4" ):
                return visitor.visitDeclVariableG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclFuncionG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcDeclaration(self):
            return self.getTypedRuleContext(GramaticaParser.FuncDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclFuncionG4" ):
                listener.enterDeclFuncionG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclFuncionG4" ):
                listener.exitDeclFuncionG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclFuncionG4" ):
                return visitor.visitDeclFuncionG4(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = GramaticaParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = GramaticaParser.DeclVariableG4Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.varDeclaration()
                pass

            elif la_ == 2:
                localctx = GramaticaParser.DeclFuncionG4Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.funcDeclaration()
                pass

            elif la_ == 3:
                localctx = GramaticaParser.DeclInstruccionG4Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.instruccion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclarationG4Context(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(GramaticaParser.Type_Context,0)

        def TK_ID(self):
            return self.getToken(GramaticaParser.TK_ID, 0)
        def SEMICOLON(self):
            return self.getToken(GramaticaParser.SEMICOLON, 0)
        def ASSIGN(self):
            return self.getToken(GramaticaParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(GramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclarationG4" ):
                listener.enterVarDeclarationG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclarationG4" ):
                listener.exitVarDeclarationG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclarationG4" ):
                return visitor.visitVarDeclarationG4(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = GramaticaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            localctx = GramaticaParser.VarDeclarationG4Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.type_()
            self.state = 52
            self.match(GramaticaParser.TK_ID)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 53
                self.match(GramaticaParser.ASSIGN)
                self.state = 54
                self.expr(0)


            self.state = 57
            self.match(GramaticaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_funcDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclarationG4Context(FuncDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.FuncDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(GramaticaParser.Type_Context,0)

        def TK_ID(self):
            return self.getToken(GramaticaParser.TK_ID, 0)
        def TK_PAR_IZQ(self):
            return self.getToken(GramaticaParser.TK_PAR_IZQ, 0)
        def TK_PAR_DER(self):
            return self.getToken(GramaticaParser.TK_PAR_DER, 0)
        def bloque(self):
            return self.getTypedRuleContext(GramaticaParser.BloqueContext,0)

        def params(self):
            return self.getTypedRuleContext(GramaticaParser.ParamsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDeclarationG4" ):
                listener.enterFuncDeclarationG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDeclarationG4" ):
                listener.exitFuncDeclarationG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclarationG4" ):
                return visitor.visitFuncDeclarationG4(self)
            else:
                return visitor.visitChildren(self)



    def funcDeclaration(self):

        localctx = GramaticaParser.FuncDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDeclaration)
        self._la = 0 # Token type
        try:
            localctx = GramaticaParser.FuncDeclarationG4Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.type_()
            self.state = 60
            self.match(GramaticaParser.TK_ID)
            self.state = 61
            self.match(GramaticaParser.TK_PAR_IZQ)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 133143986176) != 0):
                self.state = 62
                self.params()


            self.state = 65
            self.match(GramaticaParser.TK_PAR_DER)
            self.state = 66
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.ParamContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.ParamContext,i)


        def TK_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.TK_COMA)
            else:
                return self.getToken(GramaticaParser.TK_COMA, i)

        def getRuleIndex(self):
            return GramaticaParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = GramaticaParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.param()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 69
                self.match(GramaticaParser.TK_COMA)
                self.state = 70
                self.param()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(GramaticaParser.Type_Context,0)


        def TK_ID(self):
            return self.getToken(GramaticaParser.TK_ID, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = GramaticaParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.type_()
            self.state = 77
            self.match(GramaticaParser.TK_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_type_

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TypeVoidG4Context(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_VOID(self):
            return self.getToken(GramaticaParser.TK_VOID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeVoidG4" ):
                listener.enterTypeVoidG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeVoidG4" ):
                listener.exitTypeVoidG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeVoidG4" ):
                return visitor.visitTypeVoidG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeStringG4Context(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_STRING(self):
            return self.getToken(GramaticaParser.TK_STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeStringG4" ):
                listener.enterTypeStringG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeStringG4" ):
                listener.exitTypeStringG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeStringG4" ):
                return visitor.visitTypeStringG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeBoolG4Context(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_BOOL(self):
            return self.getToken(GramaticaParser.TK_BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeBoolG4" ):
                listener.enterTypeBoolG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeBoolG4" ):
                listener.exitTypeBoolG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeBoolG4" ):
                return visitor.visitTypeBoolG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeIntG4Context(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_INT(self):
            return self.getToken(GramaticaParser.TK_INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeIntG4" ):
                listener.enterTypeIntG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeIntG4" ):
                listener.exitTypeIntG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeIntG4" ):
                return visitor.visitTypeIntG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeFloatG4Context(Type_Context):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.Type_Context
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_FLOAT(self):
            return self.getToken(GramaticaParser.TK_FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeFloatG4" ):
                listener.enterTypeFloatG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeFloatG4" ):
                listener.exitTypeFloatG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeFloatG4" ):
                return visitor.visitTypeFloatG4(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = GramaticaParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                localctx = GramaticaParser.TypeIntG4Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(GramaticaParser.TK_INT)
                pass
            elif token in [33]:
                localctx = GramaticaParser.TypeFloatG4Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(GramaticaParser.TK_FLOAT)
                pass
            elif token in [34]:
                localctx = GramaticaParser.TypeStringG4Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.match(GramaticaParser.TK_STRING)
                pass
            elif token in [35]:
                localctx = GramaticaParser.TypeBoolG4Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.match(GramaticaParser.TK_BOOL)
                pass
            elif token in [36]:
                localctx = GramaticaParser.TypeVoidG4Context(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.match(GramaticaParser.TK_VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_instruccion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SentenciaForG4Context(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bucle_for(self):
            return self.getTypedRuleContext(GramaticaParser.Bucle_forContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaForG4" ):
                listener.enterSentenciaForG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaForG4" ):
                listener.exitSentenciaForG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaForG4" ):
                return visitor.visitSentenciaForG4(self)
            else:
                return visitor.visitChildren(self)


    class SentenciaImprimirG4Context(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def impresion(self):
            return self.getTypedRuleContext(GramaticaParser.ImpresionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaImprimirG4" ):
                listener.enterSentenciaImprimirG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaImprimirG4" ):
                listener.exitSentenciaImprimirG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaImprimirG4" ):
                return visitor.visitSentenciaImprimirG4(self)
            else:
                return visitor.visitChildren(self)


    class StatBloqueG4Context(InstruccionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaParser.InstruccionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bloque(self):
            return self.getTypedRuleContext(GramaticaParser.BloqueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatBloqueG4" ):
                listener.enterStatBloqueG4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatBloqueG4" ):
                listener.exitStatBloqueG4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatBloqueG4" ):
                return visitor.visitStatBloqueG4(self)
            else:
                return visitor.visitChildren(self)


    class AsignacionVariableG4Context(InstruccionContext):
